--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="form_2">Adresse</string>
     <string name="form_3">Latitude</string>
     <string name="form_4">Longitude</string>
-    <string name="form_5">Nom de la place</string>
-    <string name="form_6">Ajouter la place</string>
+    <string name="form_5">Nom du site</string>
+    <string name="form_6">Ajouter le site</string>
+    <string name="form_7">URL de la photo</string>
+    <string name="title_activity_image_view">ImageViewActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
